--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <!-- Fontawesomev5.15.0 -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.0/css/all.css">
+  <!-- slickslider -->
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.0/slick-theme.min.css" />
   <!-- main style -->
   <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
@@ -302,6 +305,94 @@
     <!-- ==== Revie Section=== -->
     <section class="review">
       <h1 class="fw-bold text-center">Trust tried and reviewed experts</h1>
+      <div class="comment">
+        <!-- item 1 -->
+        <div class="px-2">
+          <div class="card p-2">
+            <div class="d-flex align-items-center">
+              <img src="img/user1.png" class="w-full" alt="user">
+              <h6 class="fw-bold font-18">Volage New Media Inc</h6>
+            </div>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div>
+              <p class="text-w">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+              <a href="#">SOMN HOME</a>
+              <p>Feb 6,2022</p>
+            </div>
+          </div>
+        </div>
+        <!-- item 1 -->
+        <div class="px-2">
+          <div class="card p-2">
+            <div class="d-flex align-items-center">
+              <img src="img/user1.png" class="w-full" alt="user">
+              <h6 class="fw-bold font-18">Volage New Media Inc</h6>
+            </div>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="w-100">
+               <p class="text-w">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+              <a href="#">SOMN HOME</a>
+              <p>Feb 6,2022</p>
+            </div>
+          </div>
+        </div>
+        <!-- item 1 -->
+        <div class="px-2">
+          <div class="card p-2">
+            <div class="d-flex align-items-center">
+              <img src="img/user1.png" class="w-full" alt="user">
+              <h6 class="fw-bold font-18">Volage New Media Inc</h6>
+            </div>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="w-100">
+             <p class="text-w">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+              <a href="#">SOMN HOME</a>
+              <p>Feb 6,2022</p>
+            </div>
+          </div>
+        </div>
+         <!-- item 1 -->
+         <div class="px-2">
+          <div class="card p-2">
+            <div class="d-flex align-items-center">
+              <img src="img/user1.png" class="w-full" alt="user">
+              <h6 class="fw-bold font-18">Volage New Media Inc</h6>
+            </div>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="w-100">
+             <p class="text-w">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+              <a href="#">SOMN HOME</a>
+              <p>Feb 6,2022</p>
+            </div>
+          </div>
+        </div>
+        
+
+      </div>
     </section>
     <!-- ==== Brand Section=== -->
     <section class="brand py-2 my-5">
@@ -367,23 +458,25 @@
   <!-- end main -->
 
   <!--==== Footer Section ====-->
-  <footer class="footer">
-    <div class="top-footer text-white position-relative">
-      <div class="container py-2 py-lg-5">
+  <footer class="footer mt-5 pt-5">
+    <div class="top-footer text-white">
+      <div class="container pt-2 pt-lg-5">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4">
             <h3 class="fw-bold">Let’s Grow</h3>
             <button class="btn btn-custom">START NOW <i class="fa fa-arrow-right ms=1"></i> </button>
           </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="man position-absolute bottom-50 left-25">
+          <div class="col-12 col-md-6 col-lg-4 position-relative">
+            <div class="man position-absolute bottom-0">
               <img src="img/man.png" class="w-50" alt="">
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
-            <h3 class="fw-bold">Call +1 (646) 571-2054</h3>
-            <p class="fw-bold">Mon-Fri 6 am -7 pm ET</p>
-            <p class="fw-bold">Weekends: 9 am-5 pm ET</p>
+            <div class="pb-4">
+              <h3 class="fw-bold">Call +1 (646) 571-2054</h3>
+              <p class="fw-bold">Mon-Fri 6 am -7 pm ET</p>
+              <p class="fw-bold">Weekends: 9 am-5 pm ET</p>
+            </div>
           </div>
         </div>
       </div>
@@ -464,7 +557,7 @@
   <!-- slick slider -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  <script src="js/index.js" type="text/javascript"></script>
+  <script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
