everyting done except responsive

--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
           <!-- end left -->
           <div class="col">
             <div class="info-right">
-              <h1 class="fw-bold">Get your time and focus
-                back on what matters</h1>
+              <h2 class="fw-bold py-2">Get your time and focus
+                back on what matters</h2>
               <p class="font-20 fw-bold">Hire a professional, get professional results</p>
               <p>It is a long established fact that a reader will be distracted by the readable content of a page when
                 looking at its layout.</p>
@@ -199,7 +199,7 @@
 
     <!-- ====Explore Service=== -->
     <section class="explore-service">
-      <h1 class="fw-bold text-center">Explore services to find the right experts</h1>
+      <h2 class="fw-bold text-center mb-5">Explore services to find the right experts</h2>
       <div class="container">
         <ul class="row list-unstyled">
           <li class="col-12 col-md-6 col-lg-4 my-4">
@@ -257,7 +257,7 @@
 
     <!-- ==== Project Done Section=== -->
     <section class="project-done py-2 py-lg-5 my-2 my-lg-5">
-      <h1 class="fw-bold text-center py-2 py-lg-5">Get your projects done—on your terms</h1>
+      <h2 class="fw-bold text-center py-2 mb-5">Get your projects done—on your terms</h2>
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-3">
@@ -304,16 +304,16 @@
 
     <!-- ==== Revie Section=== -->
     <section class="review">
-      <h1 class="fw-bold text-center">Trust tried and reviewed experts</h1>
-      <div class="comment">
+      <h2 class="fw-bold text-center py-2">Trust tried and reviewed experts</h2>
+      <div class="comment my-2 my-lg-5">
         <!-- item 1 -->
-        <div class="px-2">
+        <div class="px-2 px-lg-4">
           <div class="card p-2">
-            <div class="d-flex align-items-center">
+            <div class="d-flex align-items-center gap-2">
               <img src="img/user1.png" class="w-full" alt="user">
-              <h6 class="fw-bold font-18">Volage New Media Inc</h6>
+              <h6 class="fw-bold font-18 mt-1 px-2">Volage New Media Inc</h6>
             </div>
-            <div class="star">
+            <div class="star py-2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -321,84 +321,88 @@
               <i class="fas fa-star"></i>
             </div>
             <div>
-              <p class="text-w">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-              <a href="#">SOMN HOME</a>
-              <p>Feb 6,2022</p>
+              <p class="text-w text-justify py-2">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+              <a href="#" class="text-dark fw-bold py-2">SOMN HOME</a>
+              <p class="font-12 py-2">Feb 6,2022</p>
             </div>
           </div>
         </div>
-        <!-- item 1 -->
-        <div class="px-2">
+        <!-- item 2 -->
+        <div class="px-2 px-lg-4">
           <div class="card p-2">
-            <div class="d-flex align-items-center">
-              <img src="img/user1.png" class="w-full" alt="user">
-              <h6 class="fw-bold font-18">Volage New Media Inc</h6>
+            <div class="d-flex align-items-center gap-2">
+              <img src="img/user2.png" class="w-full" alt="user">
+              <h6 class="fw-bold font-18 mt-1 px-2">Tracy Sailors</h6>
             </div>
-            <div class="star">
+            <div class="star py-2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
             </div>
-            <div class="w-100">
-               <p class="text-w">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-              <a href="#">SOMN HOME</a>
-              <p>Feb 6,2022</p>
+            <div>
+              <p class="text-w text-justify py-2">
+                It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+              </p>
+              <a href="#" class="text-dark fw-bold py-2">SOMN HOME</a>
+              <p class="font-12 py-2">Feb 6,2022</p>
             </div>
           </div>
         </div>
-        <!-- item 1 -->
-        <div class="px-2">
+        <!-- item 3 -->
+        <div class="px-2 px-lg-4">
           <div class="card p-2">
-            <div class="d-flex align-items-center">
-              <img src="img/user1.png" class="w-full" alt="user">
-              <h6 class="fw-bold font-18">Volage New Media Inc</h6>
+            <div class="d-flex align-items-center gap-2">
+              <img src="img/user3.png" class="w-full" alt="user">
+              <h6 class="fw-bold font-18 mt-1 px-2">Tracy Sailors</h6>
             </div>
-            <div class="star">
+            <div class="star py-2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
             </div>
-            <div class="w-100">
-             <p class="text-w">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-              <a href="#">SOMN HOME</a>
-              <p>Feb 6,2022</p>
+            <div>
+              <p class="text-w text-justify py-2">
+                It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+              </p>
+              <a href="#" class="text-dark fw-bold py-2">SOMN HOME</a>
+              <p class="font-12 py-2">Feb 6,2022</p>
             </div>
           </div>
         </div>
-         <!-- item 1 -->
-         <div class="px-2">
+        <!-- item 4 -->
+        <div class="px-2 px-lg-4">
           <div class="card p-2">
-            <div class="d-flex align-items-center">
-              <img src="img/user1.png" class="w-full" alt="user">
-              <h6 class="fw-bold font-18">Volage New Media Inc</h6>
+            <div class="d-flex align-items-center gap-2">
+              <img src="img/user4.png" class="w-full" alt="user">
+              <h6 class="fw-bold font-18 mt-1 px-2">Tracy Sailors</h6>
             </div>
-            <div class="star">
+            <div class="star py-2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
             </div>
-            <div class="w-100">
-             <p class="text-w">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-              <a href="#">SOMN HOME</a>
-              <p>Feb 6,2022</p>
+            <div>
+              <p class="text-w text-justify py-2">
+                It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+              </p>
+              <a href="#" class="text-dark fw-bold py-2">SOMN HOME</a>
+              <p class="font-12 py-2">Feb 6,2022</p>
             </div>
           </div>
         </div>
-        
-
       </div>
     </section>
     <!-- ==== Brand Section=== -->
-    <section class="brand py-2 my-5">
+    <section class="brand py-2 py-lg-5 my-2 my-lg-5">
       <div class="row mx-4 align-items-center">
         <div class="col-12 col-md-3">
-          <h2 class="fw-bold">Shopify experts help thousands of
+          <h2 class="fw-bold py-2">Shopify experts help thousands of
             businesses each year</h2>
         </div>
         <div class="col-12 col-md-9">
@@ -422,22 +426,21 @@
     <!-- ==== Ceo Section=== -->
     <section class="info py-2 py-lg-5 my-2 my-lg-5">
       <div class="container">
-        <div class="row align-items-center gap-5">
-          <div class="col">
-            <div class="info-right">
-              <h1 class="fw-bold">How to Design Your Online Store (with Zero Design Experience)</h1>
-              <p>1 hour 56 min • 20 lessons</p>
-              <p>Start designing your online store the right way, step by step, in this free online course. Stephan
+        <div class="row align-items-center">
+          <div class="col-12 col-md-6">
+            <div class="ceo-left">
+              <h2 class="fw-bold py-2">How to Design Your Online Store (with Zero Design Experience)</h2>
+              <p class="py-2">1 hour 56 min • 20 lessons</p>
+              <p class="py-2">Start designing your online store the right way, step by step, in this free online course. Stephan
                 guides you through first principles of ecommerce and store design.
                 <a href="#" class="text-orange">Watch course...</a>
               </p>
             </div>
           </div>
           <!-- end left -->
-          <div class="col">
-            <div class="info-left position-relative">
-              <img src="img/ceo.png" class="w-full h-50 service-img" alt="">
-              <h1 class="text-white fw-bold position-absolute top-50 start-50 translate-middle">LSKIT</h1>
+          <div class="col-12 col-md-6">
+            <div class="ceo-right">
+              <img src="img/ceo.png" class="w-full h-25 service-img" alt="">
             </div>
           </div>
 
@@ -447,9 +450,9 @@
     </section>
 
     <!--==== Expertise Section ====-->
-    <section class="expertise py-2 py-lg-5 my-2 my-lg-5">
+    <section class="expertise py-2 pb-5 my-2 mb-5">
       <div class="d-flex flex-column align-items-center gap-2">
-        <h1 class="fw-bold">Find the expertise you need</h1>
+        <h2 class="fw-bold">Find the expertise you need</h2>
         <p>Create a job and get matched with experts best suited to your needs.</p>
         <button class="btn btn-custom">Get a free Proposal</button>
       </div>
@@ -458,13 +461,13 @@
   <!-- end main -->
 
   <!--==== Footer Section ====-->
-  <footer class="footer mt-5 pt-5">
+  <footer class="footer mt-2 mt-lg-5 pt-2 pt-lg-5">
     <div class="top-footer text-white">
       <div class="container pt-2 pt-lg-5">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4">
             <h3 class="fw-bold">Let’s Grow</h3>
-            <button class="btn btn-custom">START NOW <i class="fa fa-arrow-right ms=1"></i> </button>
+            <button class="btn btn-white px-4 my-2">START NOW <i class="fa fa-arrow-right ms=1"></i> </button>
           </div>
           <div class="col-12 col-md-6 col-lg-4 position-relative">
             <div class="man position-absolute bottom-0">
@@ -487,48 +490,48 @@
           <div class="footer-item w-100">
             <h4 class="fw-bold">Marketing</h4>
             <ul class="list-unstyled">
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">Social Media Marketing</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">eCommerce Marketing</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">Marketing Strategy</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">Brandign & Design</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">Web Development</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">Email Marketing</a></li>
             </ul>
           </div>
           <!-- end item -->
           <div class="footer-item w-100">
-            <h4 class="fw-bold">Marketing</h4>
+            <h4 class="fw-bold">Promotion</h4>
             <ul class="list-unstyled">
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">Influencer Marketing</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">Search, SEO &  PPC</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">Growth Marketing</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">eCommerce SEO</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">Event Marketing</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">Media Buying</a></li>
             </ul>
           </div>
           <!-- end item -->
           <div class="footer-item w-100">
-            <h4 class="fw-bold">Marketing</h4>
+            <h4 class="fw-bold">Platforms</h4>
             <ul class="list-unstyled">
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">LSKIT Experts</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">Klaviyo Experts</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">HubSpot CRM</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">BigCommerce</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">WordPress</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">Migrations</a></li>
             </ul>
           </div>
           <!-- end item -->
           <div class="footer-item w-100">
-            <h4 class="fw-bold">Marketing</h4>
+            <h4 class="fw-bold">Resources</h4>
             <ul class="list-unstyled">
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
-              <li> <a href="#" class="text-white text-decoration-none">Item one</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">Careers & Jobs</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">Agency Work</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">What Matters</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">Agency Blog</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">Partnerships</a></li>
+              <li> <a href="#" class="text-white text-decoration-none">Contact Us</a></li>
             </ul>
           </div>
           <!-- end item -->
