--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- =======Header section====== -->
   <header>
     <!-- topbar -->
-    <nav class="d-flex justify-content-between container-fluid top-nav pe-4">
+    <nav class="d-flex flex-column flex-lg-row justify-content-lg-between container-fluid top-nav pe-4">
       <ul class="d-flex gap-4 mt-2 top-left">
         <li class="list-unstyled">
           <p><i class="far fa-headphones"></i> 123 456 7890</p>
@@ -163,14 +163,14 @@
     <section class="info py-2 py-lg-5 my-2 my-lg-5">
       <div class="container">
         <div class="row align-items-center gap-5">
-          <div class="col">
+          <div class="col-12 col-md-6">
             <div class="info-left position-relative">
-              <img src="img/service.png" class="w-full h-50 service-img" alt="">
+              <img src="img/service.png" class="w-100 h-50 service-img" alt="">
               <h1 class="text-white fw-bold position-absolute top-50 start-50 translate-middle">LSKIT</h1>
             </div>
           </div>
           <!-- end left -->
-          <div class="col">
+          <div class="col-12 col-md-6">
             <div class="info-right">
               <h2 class="fw-bold py-2">Get your time and focus
                 back on what matters</h2>
