--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <!-- ==== Info Section=== -->
     <section class="info py-2 py-lg-5 my-2 my-lg-5">
       <div class="container">
-        <div class="row align-items-center gap-5">
+        <div class="row align-items-center">
           <div class="col-12 col-md-6">
             <div class="info-left position-relative">
               <img src="img/service.png" class="w-100 h-50 service-img" alt="">
@@ -171,7 +171,7 @@
           </div>
           <!-- end left -->
           <div class="col-12 col-md-6">
-            <div class="info-right">
+            <div class="info-right ps-0 ps-md-5">
               <h2 class="fw-bold py-2">Get your time and focus
                 back on what matters</h2>
               <p class="font-20 fw-bold">Hire a professional, get professional results</p>
